--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "nodemon": "^3.1.11",
     "prisma": "^5.22.0",
     "streamifier": "^0.1.1"
